--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,3 @@
-.topTabs{
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.editWarp{
+  height:100vh;
 }
