富文本编辑器完成

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,5 @@
-<!--<editor [init]="getConfig()"></editor>-->
-
-<!-- 响应式表单 -->
-<!--<editor [init]="getConfig()" formControlName="content"></editor>-->
 
 <!-- 模板驱动表单 -->
-<editor [init]="getConfig()" name="content" [(ngModel)]="content" class="editWarp" apiKey="ho5r2os0hll2nogy67uz8fvmzfgeyss6e816mo6qfpwax34v"></editor>
+<!--<editor [init]="getConfig()" name="content" [(ngModel)]="content" class="editWarp" apiKey="ho5r2os0hll2nogy67uz8fvmzfgeyss6e816mo6qfpwax34v"></editor>-->
+<input type="text" placeholder="输入标题" maxlength="15" class="title-style">
+<textarea id="basic-editor" name="content" ></textarea>
