--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,12 @@
-.editWarp{
-  height:100vh;
+.title-style{
+  display: block;
+  height:45px;
+  width: 100%;
+  border:none;
+  font-size: 18px;
+  color:#000;
+  font-weight: bold;
+  padding: 0 18px;
+  border-bottom:2px solid rgba(128, 120, 120, 0.07);
 }
 
