--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,15 @@
+.comm-app{
+  height:100vh;
+}
+.comm-view{
+  height: calc(100vh - 50px);
+  overflow-y: scroll;
+}
 
+:host .am-tab-bar{
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  bottom: 0;
+  left: 0;
+}
