--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,100 +1,18 @@
-<TabBar
-  class="tabBarWarp"
-  [barTintColor]="'white'"
-  [tintColor]="tintColor"
-  [activeTab]="selectedIndex"
-  [unselectedTintColor]="unselectedTintColor"
-  (onPress)="tabBarTabOnPress($event)"
+<NoticeBar
+  *ngIf="!isMobile"
+  style="margin-bottom: 10px"
+></NoticeBar>
+<div Button (onClick)="onClick()">direction: {{ state.directionName }}</div>
+<PullToRefresh
+  [ngStyle]="dtPullToRefreshStyle"
+  [direction]="state.direction"
+  [(ngModel)]="state.refreshState"
+  [endReachedRefresh]="state.endReachedRefresh"
+  (onRefresh)="pullToRefresh($event)"
 >
-  <TabBarItem [title]="'推荐'" key="1"  [icon]="icon1" [selectedIcon]="icon2">
-    <ng-template #icon1>
-      <span class="cons font24-imp">&#xe634;</span>
-    </ng-template>
-    <ng-template #icon2>
-      <span class="cons font24-imp" style="color:#108ee9;">&#xe634;</span>
-    </ng-template>
-    <div style="background-color: white; height: 100%; text-align: center">
-      <ng-container>
-        <ng-template [ngTemplateOutlet]="content"></ng-template>
-      </ng-container>
-    </div>
-  </TabBarItem>
-  <TabBarItem [title]="'需求墙'" key="2" [badge]="'99+'" [icon]="icon3" [selectedIcon]="icon4">
-    <ng-template #icon3>
-      <span class="cons font24-imp">&#xe6e3;</span>
-    </ng-template>
-    <ng-template #icon4>
-      <span class="cons font24-imp" style="color:#108ee9;">&#xe6e3;</span>
-    </ng-template>
-    <div style="background-color: white; height: 100%; text-align: center">
-      <ng-container>
-        <ng-template [ngTemplateOutlet]="content"></ng-template>
-      </ng-container>
-    </div>
-  </TabBarItem>
-  <TabBarItem [title]="'写文章'" key="3"  [icon]="icon5" [selectedIcon]="icon6">
-    <ng-template #icon5>
-      <span class="cons font24-imp">&#xe6b6;</span>
-    </ng-template>
-    <ng-template #icon6>
-      <span class="cons font24-imp" style="color:#108ee9">&#xe6b6;</span>
-    </ng-template>
-    <div style="background-color: white; height: 100%; text-align: center">
-      <ng-container>
-        <ng-template [ngTemplateOutlet]="content"></ng-template>
-      </ng-container>
-    </div>
-  </TabBarItem>
-  <TabBarItem [title]="'排行榜'" key="4" [dot]="false" [icon]="icon7" [selectedIcon]="icon8">
-    <ng-template #icon7>
-      <span class="cons font24-imp">&#xe659;</span>
-    </ng-template>
-    <ng-template #icon8>
-      <span class="cons font24-imp" style="color:#108ee9">&#xe659;</span>
-    </ng-template>
-    <div style="background-color: white; height: 100%; text-align: center">
-      <ng-container>
-        <ng-template [ngTemplateOutlet]="content"></ng-template>
-      </ng-container>
-    </div>
-  </TabBarItem>
-  <TabBarItem [title]="'我的'" key="5" [icon]="icon9" [selectedIcon]="icon10">
-    <ng-template #icon9>
-      <span class="cons font24-imp">&#xe639;</span>
-    </ng-template>
-    <ng-template #icon10>
-      <span class="cons font24-imp" style="color:#108ee9">&#xe639;</span>
-    </ng-template>
-    <div style="background-color: white; height: 100%; text-align: center">
-      <ng-container>
-        <ng-template [ngTemplateOutlet]="content"></ng-template>
-      </ng-container>
-    </div>
-  </TabBarItem>
-</TabBar>
-<ng-template #content>
-  <div class="swiper-area">
-    <swiper [config]="config">
-      <ng-template swiperSlide>
-        <div class="swiper-item">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnMmDOLe-DTy5p0u9HWquQupHNrUFy4UwEc1m4juTuYTySy_hdY9ssvzxi35IozRrXQjQ&usqp=CAU" alt="">
-        </div>
-      </ng-template>
-      <ng-template swiperSlide>
-        <div class="swiper-item">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoFiCWdT_098404GeVTi091jyzHujhlgffWtVqTjHZeA-KyVK0ZG5NEel-1sBjyYgLCQk&usqp=CAU" alt="">
-        </div>
-      </ng-template>
-      <ng-template swiperSlide>
-        <div class="swiper-item">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzICKlJmt8kbjJkkOZ3-fB2KyusVHexA2tRFmPEm6WkhKDN2tCnoOpHHU3G79v1IbMoqM&usqp=CAU" alt="">
-        </div>
-      </ng-template>
-      <ng-template swiperSlide>
-        <div class="swiper-item">
-         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-C7fKCfCu8X_-p244Wvf1qUyswX0mNZaZKpuhDFiObsUnI02SBglPKO6Zyz8yF764mmM&usqp=CAU" alt="">
-        </div>
-      </ng-template>
-    </swiper>
-  </div>
+  <div *ngFor="let i of this.state.data" style="text-align: center; padding: 20px">{{ i }}</div>
+</PullToRefresh>
+
+<ng-template #loading>
+  <Icon type="loading"></Icon>
 </ng-template>
