--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
     <div *ngFor="let i of this.state.data">
       <div class="item-warp">
         <div class="item-title">
-          <img src="https://uploadfile.huiyi8.com/up/6c/67/95/6c67951ea0fbe179c64d963b1ee8f5ab.jpg.270.jpg" alt="">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRm4x334XykcLJ5V3PPZATpM3_FxQq-IGrgmA&usqp=CAU" alt="">
           <p>如何选择10万以内的轿车？</p>
         </div>
         <div class="item-detail">
